admin pages design added

--- a/lighthr/assets/css/style.css
+++ b/lighthr/assets/css/style.css
@@ -268,3 +268,6 @@ align-items: center;
   background-color: transparent;
   border-color: #ffffff;
 }
+.profile-tab-box{
+  padding: 15px !important;
+}
