--- a/lighthr/assets/css/style.css
+++ b/lighthr/assets/css/style.css
@@ -265,7 +265,7 @@ align-items: center;
   transition-duration: .2s;
   padding-left: 0;
 }
-.overlay-right .ghost {
+.overlay-right .ghost, .overlay-left a.ghost {
   background-color: transparent;
   border-color: #ffffff;
 }
@@ -311,4 +311,33 @@ text-align: left !important;
 }
 .footerpanel .readmorebtn {
   padding: 10px 20px;
+}
+
+
+.orspan {
+  display: inline-block;
+  width: 100%;
+  position: relative;
+  background-color: #fff;
+  z-index: 999;
+}
+.orspan::after {
+  content: '';
+  display: inline-block;
+  background-color: #f0efef;
+  width: 100%;
+  height: 2px;
+  position: absolute;
+  left: 0px;
+  right: 0px;
+  top: 8px;
+}
+.orspan span {
+  z-index: 999999;
+  height: auto;
+  display: inline-block;
+  position: relative;
+  top: 0px;
+  background-color: white;
+  padding: 0px 6px;
 }
