login page redesigned

--- a/lighthr/assets/css/style.css
+++ b/lighthr/assets/css/style.css
@@ -341,3 +341,28 @@ text-align: left !important;
   background-color: white;
   padding: 0px 6px;
 }
+.sign-in-container input[type="radio"]{
+  opacity: 1 !important;
+  pointer-events: all !important;
+  position: inherit !important;
+}
+
+.radiolayer {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  width: auto;
+  font-size: 14px;
+  background-color: #f7f7f7;
+  padding: 3px 5px;
+  margin-bottom: 10px;
+  width: 100%;
+  text-align: left;
+  border: 1px solid #efefef;
+}
+.radiolayer input {
+  height: 18px;
+  width: 24px;
+  cursor: pointer;
+}
